# django-5.2-template

./: .env.development  .env.example  .gitignore  README.md  db.sqlite3  pyproject.toml  run_local_server.sh  run_production.sh
client/templates/base/: base.html
client/templates/errors/: 404.html  500.html
client/templates/pages/: home.html  profile.html
client/templates/partials/: alert-message.html  footer.html  header.html  navbar.html
client/templates/polls/: detail.html  index.html  results.html
config/: settings.py  urls.py
config/settings/: base.py  development.py  production.py
polls/: admin.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: index.html
server/core/: apps.py  context_processors.py  middleware.py  signals.py  urls.py  utils.py  views.py
server/polls/: admin.py  apps.py  models.py
server/polls/static/polls/: style.css
server/polls/templates/polls/: results.html
templates/: base.html
tuto/: django_shell.md  index.md  test_models.md  test_views.md
